--- a/URL-Shortener/src/main/resources/application.properties
+++ b/URL-Shortener/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=URL-Shortener
+spring.datasource.url=jdbc:postgresql://localhost:5432/url_shortener
+spring.datasource.username=postgres
+spring.datasource.password=postgres
